fixed overflow

--- a/special-pages/pages/new-tab/app/customizer/components/BrowserThemeSection.module.css
+++ b/special-pages/pages/new-tab/app/customizer/components/BrowserThemeSection.module.css
@@ -13,7 +13,6 @@
         overflow: hidden;
         text-overflow: ellipsis;
         display: block;
-        width: 100%;
     }
 }
 .themeButton {
